--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -198,13 +198,13 @@ header {
       width: 100%; }
 
 .photos-block {
-  padding: 1rem 2rem;
+  padding: 1rem 2rem 0;
   -webkit-box-shadow: 0px 7px 11px 0px #EEEEEE;
           box-shadow: 0px 7px 11px 0px #EEEEEE;
   border: 1px solid #EEEEEE; }
   .photos-block img {
     width: 100%;
-    margin-bottom: 1rem; }
+    margin-bottom: 2rem; }
 
 .comments {
   padding: 2rem 0; }
@@ -359,8 +359,7 @@ footer {
       white-space: nowrap;
       width: 100%;
       text-align: center;
-      margin: 0;
-      margin-bottom: -1rem; }
+      margin: 0; }
       .photos-block .mobile-scroll::-webkit-scrollbar {
         width: 0; }
       .photos-block .mobile-scroll div {
@@ -377,15 +376,3 @@ footer {
           padding-right: 0; }
     .photos-block img {
       margin-bottom: 0; } }
-
-.test-p .test {
-  position: relative;
-  overflow: hidden;
-  overflow-x: scroll;
-  background: yellow;
-  white-space: nowrap;
-  width: 100%; }
-  .test-p .test div {
-    display: inline-block;
-    vertical-align: top;
-    width: 500px; }
