--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -356,6 +356,7 @@ footer {
       overflow-x: scroll;
       -ms-overflow-style: none;
       overflow: -moz-scrollbars-none;
+      scrollbar-width: none;
       white-space: nowrap;
       width: 100%;
       text-align: center;
